cros: Launcher: Fixed OnMousePressed

OnMousePressed now properly returns true if the event is consumed. This
fixes the bug where unhandled mouse events were not propogating to the
AppListView.

Bug: 744778
Change-Id: I46cf1eb64994221b37ef186754d5409c5ddbd466
Reviewed-on: https://chromium-review.googlesource.com/589819
Reviewed-by: Yury Khmel <khmel@chromium.org>
Reviewed-by: Dan Erat <derat@chromium.org>
Commit-Queue: Alex Newcomer <newcomer@chromium.org>
Cr-Commit-Position: refs/heads/master@{#491064}
Former-commit-id: 236d3a7e7eb6a4c0815b727b9c30bee059330e76